src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Main</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Email_Send_Weekly__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If email has been sent this week,the field is true. Otherwise,the field is false.</description>
        <label>Email Send Weekly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Send__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the field is true, the mail has been sent. If the field is false,the mail isn&apos;t sent today.</description>
        <label>Email Send Dayly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of prices on all products related to the Case</description>
        <label>Product Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>American_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locale__c</field>
            <operation>equals</operation>
            <value>America</value>
        </filters>
        <label>American Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>America</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canadian_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locale__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canadian cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Canada</group>
        </sharedTo>
    </listViews>

    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>

    <listViews>
        <fullName>QA_Manager_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>QA Manager Queue</label>
        <queue>QA_Manager_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>



    <recordTypes>
        <fullName>Feedback</fullName>
        <active>true</active>
        <businessProcess>Main</businessProcess>
        <label>Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Complaint</fullName>
        <active>true</active>
        <businessProcess>Main</businessProcess>
        <label>Product Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Main</businessProcess>
        <label>Product Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Complaint</fullName>
        <active>true</active>
        <businessProcess>Main</businessProcess>
        <label>Service Complaint</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>